refactoring css code

--- a/index.html
+++ b/index.html
@@ -18,26 +18,24 @@
 
 </head>
 <body>
-    <div class="background">
-    </div>
-      <header class="main__header text-center">
-          <div class="container main__content"> 
-            <img src="/images/logo.svg" alt="Clipboard Logo">
-            <div class="flow-content m-space">
-              <h1 class="main-title">A history of everything you copy</h1>
-              <p class="sub-title">Clipboard allows you to track and organize everything you 
-                copy. Instantly access your clipboard on all your devices.</p>
-            </div>
-            <div class="m-space split flow-content text-400">
-              <a href="#" class="btn ">Download for iOS</a>
-              <a href="#" class="btn btn-accent">Download for iOS</a>
-            </div>
+    <header class="main__header text-center">
+        <div class="container main__content"> 
+          <img src="/images/logo.svg" alt="Clipboard Logo">
+          <div class="flow-content m-space">
+            <h1 class="main-title">A history of everything you copy</h1>
+            <p class="sub-title">Clipboard allows you to track and organize everything you 
+              copy. Instantly access your clipboard on all your devices.</p>
           </div>
-      </header>
+          <div class="m-space split flow-content text-400">
+            <a href="#" class="btn ">Download for iOS</a>
+            <a href="#" class="btn btn-accent">Download for iOS</a>
+          </div>
+        </div>
+    </header>
 
-
-    <section class="section-one text-center">
-      <div class="container">
+    <!-- Start of Track Section -->
+    <section class="section-track text-center">
+        <div class="container">
           <header class="flow-content">
             <h2 class="section-title">Keep track of your snippets</h2>
             <p class="sub-title">Clipboard instantly stores any item you copy in the cloud, 
@@ -45,7 +43,7 @@
               devices. Our Mac and iOS apps will help you organize everything.</p>
           </header>
         </div>
-        <div class="track m-space">
+        <div class="track">
           <img src="/images/image-computer.png" alt="desktop image" class="desktop">
           <ul class="flow-content--lg m-space track__info">
             <li class="flow-content">
@@ -64,9 +62,10 @@
         </div>
     </section>
 
+  <!-- Start of Access Section -->
   <section class="text-center">
     <div class="container">
-      <header class="flow-content m-bottom">
+      <header class="flow-content">
         <h2 class="section-title">Access Clipboard Anywhere</h2>
         <p class="sub-title">Whether you’re on the go, or at your computer, you can access all your Clipboard 
           snippets in a few simple clicks.</p>
@@ -75,6 +74,7 @@
     </div>
   </section>
 
+  <!-- Start of SuperCharge Section -->
   <section class="text-center">
     <div class="container">
       <header class="flow-content">
@@ -82,7 +82,7 @@
         <p class="sub-title">We’ve got the tools to boost your productivity.</p>
       </header>
       
-      <ul class="split m-space flow-content--lg tools__list">
+      <ul class="split m-space">
         <li class="flow-content">
           <img src="/images/icon-blacklist.svg" alt="">
           <h3>Create blacklists</h3>
@@ -99,8 +99,13 @@
           <p>Quick preview of all snippets on your Clipboard for easy access.</p>
         </li>
       </ul>
-  
-      <ul class="flow-content--lg l-space split tools__logo">
+    </div>
+  </section>
+
+  <!-- Start of ClientLogo Section -->
+  <section class="client__logo text-center">
+    <div class="container">
+      <ul class="split super__logo">
         <li>
           <img src="/images/logo-google.png" alt="google logo">
         </li>
@@ -120,6 +125,7 @@
     </div>
   </section>
 
+  <!-- Start of Clipboard Section -->
   <section class="text-center">
     <div class="container">
       <header class="flow-content">
@@ -134,6 +140,7 @@
     </div>
   </section>
 
+  <!-- Start of Footer -->
   <footer class="footer text-center l-space">
     <div class="container grid">
       <img src="./images/logo.svg" alt="Clipboard Logo" class="footer__logo">
