adjust all the lay-out margin

--- a/index.html
+++ b/index.html
@@ -154,10 +154,10 @@
   
       <ul class="footer__list">
         <li><a href="#" class="footer__link-items">FAQs</a></li>
-        <li><a href="#" class="footer__link-items"">Contact Us</a></li>
-        <li><a href="#" class="footer__link-items"">Privacy Policy</a></li>
-        <li><a href="#" class="footer__link-items"">Press Kit</a></li>
-        <li><a href="#" class="footer__link-items"">Install Guide</a></li>
+        <li><a href="#" class="footer__link-items">Contact Us</a></li>
+        <li><a href="#" class="footer__link-items">Privacy Policy</a></li>
+        <li><a href="#" class="footer__link-items">Press Kit</a></li>
+        <li><a href="#" class="footer__link-items">Install Guide</a></li>
       </ul>
   
       <ul class="footer__social">
