--- a/index.html
+++ b/index.html
@@ -161,9 +161,9 @@
       </ul>
   
       <ul class="footer__social">
-        <li><a href="#"><i class="fab fa-facebook-square fa-lg"></i></a></li>
-        <li><a href="#"><i class="fab fa-twitter fa-lg"></i></a></li>
-        <li><a href="#"><i class="fab fa-instagram fa-lg"></i></a></li>
+        <li><a href="https://facebook.com/" target="_blank"><i class="fab fa-facebook-square fa-lg"></i></a></li>
+        <li><a href="https://twitter.com/" target="__blank"><i class="fab fa-twitter fa-lg"></i></a></li>
+        <li><a href="https://instagram.com/" target="__blank"><i class="fab fa-instagram fa-lg"></i></a></li>
       </ul>
     </div>
   </footer>
