removed target blank on social link

--- a/index.html
+++ b/index.html
@@ -161,9 +161,9 @@
       </ul>
   
       <ul class="footer__social">
-        <li><a href="https://facebook.com/" target="_blank" aria-label="facebook home page"><i class="fab fa-facebook-square fa-lg"></i></a></li>
-        <li><a href="https://twitter.com/" target="__blank"  aria-label="twitter home page"><i class="fab fa-twitter fa-lg"></i></a></li>
-        <li><a href="https://instagram.com/" target="__blank"  aria-label="instagram home page"><i class="fab fa-instagram fa-lg"></i></a></li>
+        <li><a href="https://facebook.com/" aria-label="facebook home page"><i class="fab fa-facebook-square fa-lg"></i></a></li>
+        <li><a href="https://twitter.com/"  aria-label="twitter home page"><i class="fab fa-twitter fa-lg"></i></a></li>
+        <li><a href="https://instagram.com/" aria-label="instagram home page"><i class="fab fa-instagram fa-lg"></i></a></li>
       </ul>
     </div>
   </footer>
