adjusting the spacing of the lay-out

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
   </section>
 
   <!-- Start of ClientLogo article -->
-  <div class="client__logo text-center">
+  <div class="client__logo text-center m-space">
     <div class="container">
       <ul class="super__logo split flow-content--lg">
         <li>
