h3 font size updated

--- a/index.html
+++ b/index.html
@@ -92,17 +92,17 @@
       <ul class="split m-space super__info flow-content--lg">
         <li class="flow-content">
           <img src="/images/icon-blacklist.svg" alt="blacklist icon">
-          <h3>Create blacklists</h3>
+          <h3 class="text-600">Create blacklists</h3>
           <p>Ensure sensitive information never makes its way to your clipboard by excluding certain sources.</p>
         </li>
         <li class="flow-content">   
           <img src="/images/icon-text.svg" alt="AI Icon">
-          <h3>Plain text snippets</h3>
+          <h3  class="text-600">Plain text snippets</h3>
           <p>Remove unwanted formatting from copied text for a consistent look.</p>
         </li>
         <li class="flow-content">
           <img src="/images/icon-preview.svg" alt="Eye Icon">
-          <h3>Sneak preview</h3>
+          <h3  class="text-600">Sneak preview</h3>
           <p>Quick preview of all snippets on your Clipboard for easy access.</p>
         </li>
       </ul>
@@ -110,7 +110,7 @@
   </section>
 
   <!-- Start of ClientLogo article -->
-  <div class="client__logo text-center m-space">
+  <div class="client__logo text-center">
     <div class="container">
       <ul class="super__logo split flow-content--lg">
         <li>
